# TaskScheduler

./: CMakeLists.txt  README.md
examples/: clean.sh
examples/study_simulator/: CS_A.py  CS_C.py  P_A.py  P_C.py  S.py  UK_A.py  UK_C.py  engine.py  helper.py  query_scheduler.py  readme.txt  run.sh
examples/study_simulator/input/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
examples/study_simulator/output/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
proto/: msg.proto
source/: client_main.cpp  client_output_generator.cpp  client_output_generator.h  command_line_parser.cpp  command_line_parser.h  connection.cpp  connection.h  connectionManager.cpp  connectionManager.h  constants.h  dependenciesTable.cpp  dependenciesTable.h  event.h  eventQueue.cpp  eventQueue.h  fileInterface.cpp  fileInterface.h  fileManager.cpp  fileManager.h  job.cpp  job.h  jobManager.cpp  jobManager.h  listener.cpp  listener.h  msg.pb.cc  msg.pb.h  scheduler.cpp  scheduler.h  server_main.cpp  tasksTable.cpp  tasksTable.h
